# mpistub

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  argcheck.c  argcheck.h  main_mpicc.c  main_mpicxx.c  main_mpiexec.c  main_mpif90.c  mpi.c  mpi.h  mpi_stubs.f90  mpi_stubs_f90.h  mpif.h
